added missing parts

--- a/templates/page.jinja
+++ b/templates/page.jinja
@@ -1,6 +1,6 @@
-{% include 'parts/header.jinja' %}
+{% include 'part/header.jinja' %}
 
 <h1>{{ title }}</h1>
 <p>{{ msg }}</p>
 
-{% include 'parts/footer.jinja' %}
+{% include 'part/footer.jinja' %}
